[package]
name = "orderbooks"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
futures-util = { version = "0.3.30", features = ["channel"] }
http = "1.1.0"
rust_decimal = { version = "1.35.0", features = ["serde", "serde-with-arbitrary-precision"] }
rust_decimal_macros = "1.34.2"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
tokio-websockets = { version = "0.8.3", features = ["client", "fastrand", "native-tls", "sha1_smol", "simd"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
